Fix flexbox/text-nowrap bug

--- a/src/styles/tailwind-custom.css
+++ b/src/styles/tailwind-custom.css
@@ -276,3 +276,7 @@ div[aria-label='animation'] {
 .gatsby-highlight pre {
   margin-right: 6rem !important;
 }
+
+.gatsby-highlight {
+  @apply max-w-full;
+}
